BlazeHouse: Add preference for Statusbar Tuner
 - move under dashboard > system

Change-Id: I35f65b627c688f7201a8fbfb1260e06ddfa78b44
Signed-off-by: raiyanbinmohsin <raiyanbinmohsinshishir@gmail.com>
Signed-off-by: aswin7469 <aswinas@pixysos.com>

--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -94,4 +94,9 @@
     <!-- Global Actions -->
     <string name="global_actions_advanced_reboot_title">Enable advanced restart</string>
     <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader in power menu</string>
+    
+    <!-- Statusbar tuner -->
+    <string name="statusbar_icons">Icons</string>
+    <string name="statusbar_tuner_title">Statusbar tuner</string>
+    <string name="statusbar_items_summary">Tune Statusbar items</string>
 </resources>
