--- a/res/xml/blaze_house_theme.xml
+++ b/res/xml/blaze_house_theme.xml
@@ -24,6 +24,12 @@
         android:title="@string/theme_customization_category">
 
         <Preference
+            android:key="monet_engine"
+            android:title="@string/monet_engine_title"
+            android:summary="@string/monet_engine_summary"
+            android:fragment="com.blaze.house.fragments.MonetEngine" />
+
+        <Preference
             android:key="android.theme.customization.fonts"
             android:title="@string/theme_customization_font_title"
             android:summary="@string/theme_customization_font_summary"
