BlazeHouse: Redesign dashboard
Co-authored-by: xyzuan <xyzuannihboss@gmail.com>
Co-authored-by: Joker-V2 <nipinna0@gmail.com>
Co-authored-by: Maitreya29 <maitreyapatni30@gmail.com>
Co-authored-by: Nishant Kumar <www.rajsonu13@gmail.com>

--- a/res/xml/blaze_house.xml
+++ b/res/xml/blaze_house.xml
@@ -16,13 +16,20 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-    android:title="@string/blazehouse_title" >
+    android:title=" " >
+
+    <!-- BlazeHouse Header -->
+    <PreferenceCategory
+        android:title="@string/blazehouse_title"
+        android:layout="@layout/blaze_preference_category">
+    </PreferenceCategory>
 
         <!-- Theme Room -->
         <Preference
             android:key="theme_category"
             android:title="@string/theme_title"
             android:fragment="com.blaze.house.categories.ThemeSettings"
+            settings:layout="@layout/blazeos_dashboard_preference_single"
             android:icon="@drawable/ic_settings_theme"/>
         
         <!-- Status Bar -->
@@ -30,6 +37,7 @@
             android:key="statusbar_category"
             android:title="@string/statusbar_title"
             android:fragment="com.blaze.house.categories.StatusBarSettings" 
+            settings:layout="@layout/blazeos_dashboard_preference_top"
             android:icon="@drawable/ic_settings_statusbar"/>
 
         <!-- Quick Settings panel -->
@@ -37,6 +45,7 @@
             android:key="quicksettings_category"
             android:title="@string/quicksettings_title"
             android:fragment="com.blaze.house.categories.QuickSettings"
+            settings:layout="@layout/blazeos_dashboard_preference_bottom"
             android:icon="@drawable/ic_settings_quicksettings"/>
 
         <!-- Buttons -->
@@ -44,20 +53,23 @@
             android:key="buttonsettings_category"
             android:title="@string/button_title"
             android:fragment="com.blaze.house.categories.ButtonSettings"
-            android:icon="@drawable/ic_settings_buttons"/>
+            settings:layout="@layout/blazeos_dashboard_preference_top"
+            android:icon="@drawable/ic_settings_buttons" />
 
         <!-- Gestures -->
         <Preference
             android:key="gestures_category"
             android:title="@string/gestures_title" 
             android:fragment="com.blaze.house.categories.GestureSettings"
-            android:icon="@drawable/ic_settings_gestures"/>
+            settings:layout="@layout/blazeos_dashboard_preference_bottom"
+            android:icon="@drawable/ic_settings_sos_gestures"/>
 
         <!-- Lock Screen -->
         <Preference
             android:key="lockscreen_category"
             android:title="@string/lockscreen_title" 
             android:fragment="com.blaze.house.categories.LockScreenSettings"
+            settings:layout="@layout/blazeos_dashboard_preference_top"
             android:icon="@drawable/ic_settings_lockscreens"/>
 
         <!-- Notifications -->
@@ -65,6 +77,7 @@
             android:key="notifications_category"
             android:title="@string/notifications_title"
             android:fragment="com.blaze.house.categories.NotificationSettings"
+            settings:layout="@layout/blazeos_dashboard_preference_bottom"
             android:icon="@drawable/ic_settings_notifications"/>
 
         <!-- system -->
@@ -72,6 +85,7 @@
             android:key="system_category"
             android:title="@string/system_title" 
             android:fragment="com.blaze.house.categories.SystemSettings"
+            settings:layout="@layout/blazeos_dashboard_preference_top"
             android:icon="@drawable/ic_settings_system"/>
         
         <!-- Misc -->
@@ -79,6 +93,7 @@
             android:key="misc_category"
             android:title="@string/misc_title" 
             android:fragment="com.blaze.house.categories.MiscSettings"
+            settings:layout="@layout/blazeos_dashboard_preference_bottom"
             android:icon="@drawable/ic_settings_miscs"/>
 
 </PreferenceScreen>
