--- a/res/xml/blaze_house_lockscreen.xml
+++ b/res/xml/blaze_house_lockscreen.xml
@@ -66,5 +66,18 @@
             android:summary="@string/pulse_settings_summary" />
 
     </PreferenceCategory>
+    
+    <!-- Udfps options -->
+    <PreferenceCategory
+        android:key="udfps_category"
+        android:title="@string/udfps_category">
+
+        <Preference
+            android:key="udfps_settings"
+            android:title="@string/udfps_settings_title"
+            android:summary="@string/udfps_settings_summary"
+            android:fragment="com.blaze.house.fragments.UdfpsSettings" />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
