--- a/res/xml/blaze_house_quicksettings.xml
+++ b/res/xml/blaze_house_quicksettings.xml
@@ -43,5 +43,19 @@
             android:defaultValue="true" />
 
     </PreferenceCategory>
+    
+    <PreferenceCategory
+        android:key="quick_settings_panel"
+        android:title="@string/qs_panel_title">
+            
+      <com.blaze.house.preferences.SystemSettingListPreference
+            android:key="qs_panel_style"
+            android:title="@string/qs_styles_title"
+            android:entries="@array/qs_styles_entries"
+            android:entryValues="@array/qs_styles_values"
+            android:summary="%s"
+            android:defaultValue="0" />
+        
+    </PreferenceCategory>
 
 </PreferenceScreen>
