--- a/res/xml/blaze_house_theme.xml
+++ b/res/xml/blaze_house_theme.xml
@@ -36,6 +36,12 @@
             android:fragment="com.blaze.house.fragments.FontsPicker"/>
 
         <Preference
+            android:key="android.theme.customization.lockscreen_clock_font"
+            android:title="@string/theme_customization_lock_clock_title"
+            android:summary="@string/theme_customization_lock_clock_summary"
+            android:fragment="com.blaze.house.fragments.LockClockFonts" />
+
+        <Preference
             android:key="android.theme.customization.icon_pack"
             android:title="@string/theme_customization_icon_pack_title"
             android:summary="@string/theme_customization_icon_pack_summary"
