BlazeHouse: Bring back support for Parallel space
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/xml/blaze_house_system.xml
+++ b/res/xml/blaze_house_system.xml
@@ -17,5 +17,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/system_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    
+    <PreferenceCategory
+        android:title="@string/parallel_space_title">
+
+    <!-- Parallel Space -->
+    <Preference
+        android:key="parallel_space"
+        android:title="@string/laboratory_parallel_space_title"
+        android:summary="@string/laboratory_parallel_space_summary">
+        <intent
+            android:targetPackage="ink.kscope.parallelspace"
+            android:targetClass="ink.kscope.parallelspace.MainActivity" />
+    </Preference>
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
