--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -37,5 +37,10 @@
     
     <!-- Sub category -->
     <string name="general_category">General</string>
+    
+    <!-- Parallel space -->
+    <string name="parallel_space_title">Parallel Space</string>
+    <string name="laboratory_parallel_space_title">Parallel space</string>
+    <string name="laboratory_parallel_space_summary">Allow running multiple instances of the same application in parallel</string>
 
 </resources>
