--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -373,4 +373,7 @@
     <string name="smart_pixels_on_power_save_summary">Use Smart Pixels when battery saver is enabled</string>
     <string name="smart_pixels_percent">Percent of pixels to disable</string>
     <string name="smart_pixels_shift">Prevent burn-in by shifting pixels every</string>
+
+    <!-- Frame rate recorder -->
+    <string name="frame_rate_recorder_title">Frame rate in Screen Record</string>
 </resources>
