--- a/res/xml/blaze_house_misc.xml
+++ b/res/xml/blaze_house_misc.xml
@@ -26,6 +26,14 @@
                 android:title="@string/laboratory_ignore_window_secure_title"
                 android:summary="@string/laboratory_ignore_window_secure_summary"
                 android:defaultValue="false"/>
+                
+            <!-- Screen Recorder -->       
+    	      <com.blaze.house.preferences.SystemSettingSeekBarPreference
+                android:key="frame_rate_recorder"
+                android:title="@string/frame_rate_recorder_title"
+                android:min="0"
+                android:max="120"
+                android:defaultValue="60" />
     </PreferenceCategory>
     
     <PreferenceCategory
