--- a/res/xml/blaze_house_misc.xml
+++ b/res/xml/blaze_house_misc.xml
@@ -34,6 +34,12 @@
                 android:min="0"
                 android:max="120"
                 android:defaultValue="60" />
+                
+            <com.blaze.house.preferences.GlobalSettingSwitchPreference
+                android:key="pie_animation_style"
+                android:title="@string/pie_animation_style_title"
+                android:summary="@string/pie_animation_style_summary"
+                android:defaultValue="false" />
     </PreferenceCategory>
     
     <PreferenceCategory
