--- a/res/xml/blaze_house_quicksettings.xml
+++ b/res/xml/blaze_house_quicksettings.xml
@@ -41,6 +41,15 @@
             settings:units="%"
             android:max="100"
             android:min="1" />
+            
+      <!-- QS UI -->
+    	<com.blaze.house.preferences.SystemSettingListPreference
+        	android:key="qs_ui_style"
+        	android:title="@string/qs_ui_title"
+        	android:entries="@array/qs_ui_entries"
+        	android:entryValues="@array/qs_ui_values"
+        	android:summary="%s"
+        	android:defaultValue="0" />
 
     </PreferenceCategory>
     
