--- a/res/xml/blaze_house_statusbar.xml
+++ b/res/xml/blaze_house_statusbar.xml
@@ -27,5 +27,20 @@
                 android:summary="@string/network_traffic_summary"
                 android:fragment="com.blaze.house.fragments.NetworkTrafficSettings" />
     </PreferenceCategory>
+    
+    <PreferenceCategory
+        android:key="icons_category"
+        android:title="@string/statusbar_icons">
+
+	    <Preference
+            android:key="systemui_tuner_statusbar"
+            android:title="@string/statusbar_items_title"
+            android:summary="@string/statusbar_items_summary" >
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
+        </Preference>
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
