--- a/res/xml/blaze_house_button.xml
+++ b/res/xml/blaze_house_button.xml
@@ -17,5 +17,15 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="@string/button_title"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+        
+        <PreferenceCategory
+         android:title="@string/power_button_category" >
+         
+	     <com.blaze.house.preferences.SecureSettingSwitchPreference
+                  android:key="advanced_reboot"
+                  android:title="@string/global_actions_advanced_reboot_title"
+                  android:summary="@string/global_actions_advanced_reboot_summary"
+                  android:defaultValue="false" />
+       </PreferenceCategory>
 
 </PreferenceScreen>
