--- a/res/xml/blaze_house_button.xml
+++ b/res/xml/blaze_house_button.xml
@@ -29,6 +29,12 @@
 			            android:entries="@array/torch_power_button_gesture_entries"
 			            android:entryValues="@array/torch_power_button_gesture_values"
 			            android:defaultValue="0" />
+			            
+			       <com.blaze.house.preferences.SecureSettingSwitchPreference
+                  android:key="advanced_reboot"
+                  android:title="@string/global_actions_advanced_reboot_title"
+                  android:summary="@string/global_actions_advanced_reboot_summary"
+                  android:defaultValue="false" />
        </PreferenceCategory>
 
 </PreferenceScreen>
