BlazeHouse: Forward Port Volume Long Press Skip Tracks [2/2]
Signed-off-by: Jayant-Deshmukh <jayantdeshmuk008@gmail.com>

--- a/res/xml/blaze_house_button.xml
+++ b/res/xml/blaze_house_button.xml
@@ -36,5 +36,15 @@
                   android:summary="@string/global_actions_advanced_reboot_summary"
                   android:defaultValue="false" />
        </PreferenceCategory>
+       
+       <PreferenceCategory
+         android:title="@string/volume_button_category" >
+             
+             <com.blaze.house.preferences.SystemSettingSwitchPreference
+                  android:key="volbtn_music_controls"
+                  android:title="@string/volume_button_music_control_title"
+                  android:summary="@string/volume_button_music_control_summary"
+                  android:defaultValue="false" />
+       </PreferenceCategory>
 
 </PreferenceScreen>
