--- a/res/xml/blaze_house_quicksettings.xml
+++ b/res/xml/blaze_house_quicksettings.xml
@@ -26,6 +26,12 @@
             android:title="@string/quick_settings_vibrate_title"
             android:summary="@string/quick_settings_vibrate_summary"
             android:defaultValue="false"/>
+            
+    <com.blaze.house.preferences.SystemSettingSwitchPreference
+            android:key="qs_footer_data_usage"
+            android:title="@string/qs_footer_datausage_title"
+            android:summary="@string/qs_footer_datausage_summary"
+            android:defaultValue="false" />
 
     </PreferenceCategory>
     
