--- a/res/xml/blaze_house_statusbar.xml
+++ b/res/xml/blaze_house_statusbar.xml
@@ -29,6 +29,17 @@
     </PreferenceCategory>
     
     <PreferenceCategory
+        android:title="@string/network_category">
+        
+        <com.blaze.house.preferences.SystemSettingSwitchPreference
+            android:key="qs_footer_data_usage"
+            android:title="@string/qs_footer_datausage_title"
+            android:summary="@string/qs_footer_datausage_summary"
+            android:defaultValue="false" />
+
+    </PreferenceCategory>
+    
+    <PreferenceCategory
         android:key="icons_category"
         android:title="@string/statusbar_icons">
 
