--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -236,4 +236,8 @@
     <string name="network_category">Network Options</string>
     <string name="qs_footer_datausage_title">Data usage</string>
     <string name="qs_footer_datausage_summary">Display data usage summary in quick settings footer</string>
+    
+    <!-- 4G icon -->
+    <string name="show_fourg_icon_title">4G icon</string>
+    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
 </resources>
