--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -288,4 +288,13 @@
     <string name="screen_off_animation_title">Screen off animation</string>
     <string name="screen_off_animation_crt" translatable="false">CRT</string>
     <string name="screen_off_animation_scale">Scale</string>
+
+    <!-- Clock Settings -->
+    <string name="clock_style_category_title">Clock Settings</string>
+
+    <!-- Clock position -->
+    <string name="status_bar_clock_position_center">Center</string>
+    <string name="status_bar_clock_position_left">Left</string>
+    <string name="status_bar_clock_position_right">Right</string>
+    <string name="status_bar_clock_position_title">Clock position</string>
 </resources>
