--- a/res/xml/blaze_house_lockscreen.xml
+++ b/res/xml/blaze_house_lockscreen.xml
@@ -38,6 +38,14 @@
                 android:title="@string/wake_when_plugged_or_unplugged_title"
                 android:summary="@string/wake_when_plugged_or_unplugged_summary"
                 android:defaultValue="@*android:bool/config_unplugTurnsOnScreen" />
+                
+            <com.blaze.house.preferences.SystemSettingListPreference
+                android:key="screen_off_animation"
+                android:title="@string/screen_off_animation_title"
+                android:entries="@array/screen_off_animation_entries"
+                android:entryValues="@array/screen_off_animation_values"
+                android:summary="%s"
+                android:defaultValue="0" />
 
     </PreferenceCategory>
     
