--- a/res/xml/blaze_house_lockscreen.xml
+++ b/res/xml/blaze_house_lockscreen.xml
@@ -26,6 +26,12 @@
                 android:title="@string/enable_fingerprint_ripple_effect_title"
                 android:summary="@string/enable_fingerprint_ripple_effect_summary"
                 android:defaultValue="true" />
+                
+            <com.blaze.house.preferences.SystemSettingSwitchPreference
+                android:key="lockscreen_battery_info"
+                android:title="@string/lockscreen_battery_info_title"
+                android:summary="@string/lockscreen_battery_info_summary"
+                android:defaultValue="true" />
 
     </PreferenceCategory>
     
