--- a/res/xml/blaze_house_gestures.xml
+++ b/res/xml/blaze_house_gestures.xml
@@ -17,5 +17,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/gestures_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    
+    <PreferenceCategory
+         android:title="@string/d2ts_category" >
+         
+             <com.blaze.house.preferences.SystemSettingSwitchPreference
+                  android:key="double_tap_sleep_gesture"
+                  android:title="@string/double_tap_to_sleep_title"
+                  android:summary="@string/double_tap_to_sleep_summary"
+                  android:defaultValue="false"/>
+    </PreferenceCategory>
 
 </PreferenceScreen>
