BlazeHouse: Add toggle for Double tap to sleep on lockscreen [2/2]

--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -111,4 +111,8 @@
     <string name="d2ts_category">Double Tap to Sleep</string>
     <string name="double_tap_to_sleep_title">DT2S on Statusbar</string>
     <string name="double_tap_to_sleep_summary">Double-tap anywhere on the status bar to put the device to sleep</string>
+    
+    <!-- Double tap lockscreen to sleep -->
+    <string name="double_tap_to_sleep_lockscreen_title">DT2S on Lockscreen</string>
+    <string name="double_tap_to_sleep_lockscreen_summary">Double-tap anywhere on the lockscreen to put the device to sleep</string>
 </resources>
