--- a/res/xml/blaze_house_gestures.xml
+++ b/res/xml/blaze_house_gestures.xml
@@ -26,6 +26,12 @@
                   android:title="@string/double_tap_to_sleep_title"
                   android:summary="@string/double_tap_to_sleep_summary"
                   android:defaultValue="false"/>
+        
+             <com.blaze.house.preferences.SystemSettingSwitchPreference
+                  android:key="double_tap_sleep_lockscreen"
+                  android:title="@string/double_tap_to_sleep_lockscreen_title"
+                  android:summary="@string/double_tap_to_sleep_lockscreen_summary"
+                  android:defaultValue="false"/>
     </PreferenceCategory>
 
 </PreferenceScreen>
