--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -115,4 +115,12 @@
     <!-- Double tap lockscreen to sleep -->
     <string name="double_tap_to_sleep_lockscreen_title">DT2S on Lockscreen</string>
     <string name="double_tap_to_sleep_lockscreen_summary">Double-tap anywhere on the lockscreen to put the device to sleep</string>
+    
+    <!-- Torch Power button gestures -->
+    <string name="power_button_category">Power Button</string>
+    <string name="torch_power_button_gesture_title">Toggle torch when screen off</string>
+    <string name="torch_power_button_gesture_none">Disabled</string>
+    <string name="torch_power_button_gesture_dt">Double tap power button (slower single tap response), Disables double power tap for camera.</string>
+    <string name="torch_power_button_gesture_lp">Long press power button</string>
+    
 </resources>
