--- a/res/xml/blaze_house_lockscreen.xml
+++ b/res/xml/blaze_house_lockscreen.xml
@@ -17,5 +17,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/lockscreen_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    
+    <PreferenceCategory
+        android:key="lockscreen_media_options"
+        android:title="@string/lockscreen_media_options_title">
+
+        <com.blaze.house.preferences.SecureSettingSwitchPreference
+            android:key="lockscreen_media_metadata"
+            android:title="@string/media_art_title"
+            android:summary="@string/media_art_summary"
+            android:defaultValue="false" />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
