--- a/res/xml/blaze_house_lockscreen.xml
+++ b/res/xml/blaze_house_lockscreen.xml
@@ -27,6 +27,12 @@
             android:title="@string/media_art_title"
             android:summary="@string/media_art_summary"
             android:defaultValue="false" />
+            
+        <Preference
+            android:key="pulse_settings"
+            android:fragment="com.blaze.house.fragments.PulseSettings"
+            android:title="@string/pulse_settings"
+            android:summary="@string/pulse_settings_summary" />
 
     </PreferenceCategory>
 
