--- a/res/xml/blaze_house_lockscreen.xml
+++ b/res/xml/blaze_house_lockscreen.xml
@@ -19,6 +19,17 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
     
     <PreferenceCategory
+        android:title="@string/general_category">
+        
+            <com.blaze.house.preferences.SystemSettingSwitchPreference
+                android:key="enable_ripple_effect"
+                android:title="@string/enable_fingerprint_ripple_effect_title"
+                android:summary="@string/enable_fingerprint_ripple_effect_summary"
+                android:defaultValue="true" />
+
+    </PreferenceCategory>
+    
+    <PreferenceCategory
         android:key="lockscreen_media_options"
         android:title="@string/lockscreen_media_options_title">
 
