--- a/res/xml/blaze_house_lockscreen.xml
+++ b/res/xml/blaze_house_lockscreen.xml
@@ -32,6 +32,12 @@
                 android:title="@string/lockscreen_battery_info_title"
                 android:summary="@string/lockscreen_battery_info_summary"
                 android:defaultValue="true" />
+                
+            <com.blaze.house.preferences.GlobalSettingSwitchPreference
+                android:key="wake_when_plugged_or_unplugged"
+                android:title="@string/wake_when_plugged_or_unplugged_title"
+                android:summary="@string/wake_when_plugged_or_unplugged_summary"
+                android:defaultValue="@*android:bool/config_unplugTurnsOnScreen" />
 
     </PreferenceCategory>
     
