BlazeHouse: Toast icon switch [2/2]
Signed-off-by: Arghya Chanda <arghyac35@gmail.com>
Change-Id: I65094566e6f5bdbfccf2a8361632780f3502d3a9
Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>

--- a/res/xml/blaze_house_system.xml
+++ b/res/xml/blaze_house_system.xml
@@ -19,6 +19,18 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
     
     <PreferenceCategory
+        android:title="@string/general_category">
+        
+            <com.blaze.house.preferences.SystemSettingSwitchPreference
+                android:key="toast_icon"
+                android:order="24"
+                android:title="@string/toast_icon_title"
+                android:summary="@string/toast_icon_summary"
+                android:defaultValue="true"/>
+
+    </PreferenceCategory>
+    
+    <PreferenceCategory
         android:key="incall_vib_options"
         android:title="@string/incall_vibration_category" >
 
