BlazeHouse: Make colored Statusbar Icons optional [2/2]
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Co-Authored-By: David Ramirez  <DavidYonatan9@hotmail.com>
Co-Authored-By: Fikri <93211446+fiirefly24@users.noreply.github.com>

--- a/res/xml/blaze_house_statusbar.xml
+++ b/res/xml/blaze_house_statusbar.xml
@@ -69,6 +69,12 @@
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
         </Preference>
+        
+        <com.blaze.house.preferences.SystemSettingSwitchPreference
+            android:key="statusbar_colored_icons"
+            android:title="@string/statusbar_colored_icons_title"
+            android:summary="@string/statusbar_colored_icons_summary"
+            android:defaultValue="false" />
 
     </PreferenceCategory>
 
