--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -173,4 +173,7 @@
     <string name="qs_tile_vertical_layout_summary">Enable vertical layout for QS tiles</string>
     <string name="qs_ui_title">Quick Settings UI</string>
     <string name="android_eleven">Android 11</string>
+
+    <!-- QS panel transparency -->
+    <string name="qs_transparency_title">Background transparency</string>
 </resources>
