--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -304,4 +304,9 @@
     <string name="status_bar_am_pm_small">Small</string>
     <string name="status_bar_am_pm_title">Clock AM/PM style</string>
     <string name="status_bar_am_pm_unavailable">24-hour clock is enabled</string>
+
+    <!-- GamesPropsUtils -->
+    <string name="spoofing_category">Spoofing</string>
+    <string name="games_device_spoof_title">Unlock higher FPS in games</string>
+    <string name="games_device_spoof_summary">Spoof device as a high-end model in certain games, to unlock higher FPS</string>
 </resources>
