--- a/res/xml/blaze_house_misc.xml
+++ b/res/xml/blaze_house_misc.xml
@@ -27,5 +27,16 @@
                 android:summary="@string/laboratory_ignore_window_secure_summary"
                 android:defaultValue="false"/>
     </PreferenceCategory>
+    
+    <PreferenceCategory
+        android:title="@string/spoofing_category">
+
+	      <com.blaze.house.preferences.SecureSettingSwitchPreference
+            android:key="games_device_spoof"
+            android:title="@string/games_device_spoof_title"
+            android:summary="@string/games_device_spoof_summary"
+            android:defaultValue="false"/>
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
