--- a/res/xml/blaze_house_statusbar.xml
+++ b/res/xml/blaze_house_statusbar.xml
@@ -79,8 +79,14 @@
             android:summary="@string/data_disabled_icon_summary"
             android:defaultValue="true"/>
 
+        <com.blaze.house.preferences.SystemSettingSwitchPreference
+            android:key="use_old_mobiletype"
+            android:title="@string/use_old_mobiletype_title"
+            android:summary="@string/use_old_mobiletype_summary"
+            android:defaultValue="false" />
+
     </PreferenceCategory>
-    
+
     <PreferenceCategory
         android:key="icons_category"
         android:title="@string/statusbar_icons">
