--- a/res/xml/blaze_house_system.xml
+++ b/res/xml/blaze_house_system.xml
@@ -72,6 +72,13 @@
     
     <PreferenceCategory
         android:title="@string/parallel_space_title">
+        
+        <!-- Smart Pixels -->
+        <Preference
+            android:key="smart_pixels"
+            android:title="@string/smart_pixels_title" 
+            android:summary="@string/smart_pixels_summary" 
+            android:fragment="com.blaze.house.categories.SmartPixels" />
 
     <!-- Parallel Space -->
     <Preference
