--- a/res/xml/blaze_house_quicksettings.xml
+++ b/res/xml/blaze_house_quicksettings.xml
@@ -50,6 +50,13 @@
         	android:entryValues="@array/qs_ui_values"
         	android:summary="%s"
         	android:defaultValue="0" />
+        	
+      <com.blaze.house.preferences.SecureSettingListPreference
+          android:key="qs_tile_shape"
+          android:title="@string/qs_tile_shape"
+          android:entries="@array/qs_tile_shape_entries"
+          android:entryValues="@array/qs_tile_shape_values"
+          android:defaultValue="2" />
 
     </PreferenceCategory>
     
