--- a/res/xml/blaze_house_quicksettings.xml
+++ b/res/xml/blaze_house_quicksettings.xml
@@ -57,13 +57,11 @@
             android:defaultValue="0" />
             
         <!-- QS Header Image -->
-        <com.blaze.house.preferences.SystemSettingSeekBarPreference
+        <Preference
             android:key="qs_header_image"
+            android:fragment="com.blaze.house.fragments.qs.QsHeaderImageSettings"
             android:title="@string/qs_header_image_title"
-            android:defaultValue="0"
-            settings:interval="1"
-            android:max="36"
-            android:min="0" />
+            android:summary="@string/qs_header_image_summary" />
       
       <!-- QS UI -->
     	<com.blaze.house.preferences.SystemSettingListPreference
