--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -158,10 +158,9 @@
     <string name="qs_thin">ThinLine</string>
     
     <!-- QS tiles layout -->
-    <string name="qs_layout_category_title">QuickSettings</string>
+    <string name="qs_layout_category_title">Quick Settings layout</string>
     <string name="qs_tile_layout_title">QS tiles layout</string>
-    <string name="qs_ui_title">Quick Settings UI</string>
-    <string name="qs_tile_layout_summary">Customize QuickSettings panel</string>
+    <string name="qs_tile_layout_summary">Customize tiles layout in QS panel</string>
     <string name="qs_tiles_layout_category">Tiles layout</string>
     <string name="qs_rows_portrait_title">Rows (Portrait)</string>
     <string name="qqs_rows_portrait_title">Rows (Quick QS portrait)</string>
@@ -172,5 +171,6 @@
     <string name="qs_tile_hide_label_summary">Show only icon for QS tiles</string>
     <string name="qs_tile_vertical_layout_title">Vertical layout</string>
     <string name="qs_tile_vertical_layout_summary">Enable vertical layout for QS tiles</string>
+    <string name="qs_ui_title">Quick Settings UI</string>
     <string name="android_eleven">Android 11</string>
 </resources>
