--- a/res/xml/blaze_house_quicksettings.xml
+++ b/res/xml/blaze_house_quicksettings.xml
@@ -32,8 +32,14 @@
             android:title="@string/qs_footer_datausage_title"
             android:summary="@string/qs_footer_datausage_summary"
             android:defaultValue="false" />
-            
-    <com.blaze.house.preferences.SystemSettingSeekBarPreference
+
+    </PreferenceCategory>
+    
+    <PreferenceCategory
+        android:key="quick_settings_panel"
+        android:title="@string/qs_panel_title">
+        
+      <com.blaze.house.preferences.SystemSettingSeekBarPreference
             android:key="qs_transparency"
             android:title="@string/qs_transparency_title"
             android:defaultValue="100"
@@ -41,7 +47,7 @@
             settings:units="%"
             android:max="100"
             android:min="1" />
-            
+      
       <!-- QS UI -->
     	<com.blaze.house.preferences.SystemSettingListPreference
         	android:key="qs_ui_style"
@@ -57,7 +63,13 @@
           android:entries="@array/qs_tile_shape_entries"
           android:entryValues="@array/qs_tile_shape_values"
           android:defaultValue="2" />
-
+          
+      <Preference
+        	android:key="qs_tile_layout"
+        	android:title="@string/qs_tile_layout_title"
+        	android:summary="@string/qs_tile_layout_summary"
+        	android:fragment="com.blaze.house.fragments.QsTileLayoutSettings" />
+        
     </PreferenceCategory>
     
     <PreferenceCategory
@@ -90,48 +102,6 @@
             android:summary="@string/disable_qs_summary"
             android:defaultValue="false" />
 
-    </PreferenceCategory>
-    
-    <PreferenceCategory
-        android:key="tiles_layout"
-        android:title="@string/qs_tiles_layout_category">
-        
-        <com.blaze.house.preferences.SystemSettingSeekBarPreference
-            android:key="qs_layout_columns"
-            android:title="@string/qs_columns_portrait_title"
-            android:defaultValue="2"
-            android:max="6"
-            settings:min="2" />
-
-        <com.blaze.house.preferences.SystemSettingSeekBarPreference
-            android:key="qs_layout_rows"
-            android:title="@string/qs_rows_portrait_title"
-            android:defaultValue="4"
-            android:max="6"
-            settings:min="2" />
-
-        <com.blaze.house.preferences.SystemSettingSeekBarPreference
-            android:key="qqs_layout_rows"
-            android:title="@string/qqs_rows_portrait_title"
-            android:defaultValue="2"
-            android:max="5"
-            settings:min="1" />
-
-        <com.blaze.house.preferences.SystemSettingSwitchPreference
-            android:key="qs_tile_label_hide"
-            android:title="@string/qs_tile_hide_label_title"
-            android:summary="@string/qs_tile_hide_label_summary"
-            android:defaultValue="false" />
-
-        <com.blaze.house.preferences.SystemSettingSwitchPreference
-            android:key="qs_tile_vertical_layout"
-            android:title="@string/qs_tile_vertical_layout_title"
-            android:summary="@string/qs_tile_vertical_layout_summary"
-            android:defaultValue="false" />
-
-        <com.android.settingslib.widget.LayoutPreference
-            android:key="apply_change_button"
-            android:layout="@layout/qs_tile_apply_change_button" />
     </PreferenceCategory>
 
 </PreferenceScreen>
