--- a/res/xml/blaze_house_quicksettings.xml
+++ b/res/xml/blaze_house_quicksettings.xml
@@ -79,6 +79,14 @@
           android:entryValues="@array/qs_tile_shape_values"
           android:defaultValue="2" />
           
+      <com.blaze.house.preferences.SystemSettingSeekBarPreference
+            android:key="qs_header_size"
+            android:title="@string/large_qs_switch_title"
+            android:max="400"
+            settings:min="110"
+            settings:interval="1"
+            android:defaultValue="110" />
+          
       <Preference
         	android:key="qs_tile_layout"
         	android:title="@string/qs_tile_layout_title"
